# robot-doctor

./: .dockerignore  .gitignore  .robot-doctor.example.json  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  SECURITY.md  compose.yaml  pyproject.toml  start_robot_doctor.command  stop_robot_doctor.command  turtlebot4_discovery.json  turtlebot4_discovery.txt
.github/workflows/: test.yml
docs/: noise_calibration.md  release_checklist.md
project_overviews/: project_overview_basic.md  project_overview_expert.md  project_overview_intermediate.md  ros_beginner_guide.md
schemas/: robot_doctor_scan.schema.json
src/robot_doctor/: __init__.py  __main__.py  config.py  intake.py  overviews.py  scanner.py  web.py
src/robot_doctor/schemas/: robot_doctor_config.schema.json  robot_doctor_scan.schema.json
tests/: check_sdist.py  check_wheel.py  real_repositories.json  run_accuracy_benchmark.py  run_live_git_intake.py  run_real_repository_regressions.py  test_accuracy_benchmark.py  test_robot_doctor.py  test_self_service.py
tests/fixtures/cpp_robot/probe_cpp/: CMakeLists.txt  controllers.yaml  package.xml  plugins.xml
tests/fixtures/cpp_robot/probe_cpp/include/probe_cpp/: wrappers.hpp
tests/fixtures/cpp_robot/probe_cpp/src/: probe.cpp
tests/fixtures/cpp_robot/probe_cpp/urdf/: control_macro.xacro  generated_robot.xacro  orphan_macro.xacro  probe.urdf  unincluded_invocation.xacro  unrelated_macro.xacro
tests/fixtures/launch_robot/launch_probe/: CMakeLists.txt  package.xml
tests/fixtures/launch_robot/launch_probe/config/: probe.yaml
tests/fixtures/launch_robot/launch_probe/launch/: child.launch.xml  main.launch.py  yaml_child.launch.yaml
tests/fixtures/python_robot/probe_py/: package.xml  pyproject.toml  setup.cfg  setup.py
tests/fixtures/python_robot/probe_py/msg/: ProbeState.msg
tests/fixtures/python_robot/probe_py/probe_py/: keyword_node.py  node.py
tests/ground_truth/: README.md  manifest.json
tools/: generate_project_overviews.py  robot_doctor_web.py  ros_repo_discover.py
