[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-doctor-static"
version = "0.5.0"
description = "Evidence-backed static inventory and diagnostics for ROS 2 repositories"
readme = "README.md"
requires-python = ">=3.10.15"
authors = [{name = "Robot Doctor contributors"}]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
dependencies = [
  "tomli>=2.0; python_version < '3.11'"
]

[project.optional-dependencies]
test = ["jsonschema>=4.21"]

[project.scripts]
robot-doctor-scan = "robot_doctor.scanner:main"
robot-doctor-overview = "robot_doctor.overviews:main"
robot-doctor-web = "robot_doctor.web:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["robot_doctor*"]

[tool.setuptools.package-data]
robot_doctor = ["schemas/*.json"]
