cmake_minimum_required(VERSION 3.8)
project(probe_cpp)
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_srvs REQUIRED)
find_package(example_interfaces REQUIRED)
add_executable(probe_cpp_node src/probe.cpp)
ament_target_dependencies(probe_cpp_node rclcpp rclcpp_action sensor_msgs std_srvs example_interfaces)
install(TARGETS probe_cpp_node DESTINATION lib/${PROJECT_NAME})
ament_package()
