<?xml version="1.0"?>
<package format="3">
  <name>probe_cpp</name>
  <version>0.1.0</version>
  <description>C++ scanner fixture</description>
  <maintainer email="fixture@example.com">Fixture</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
