<?xml version="1.0"?>
<package format="3">
  <name>probe_py</name>
  <version>0.1.0</version>
  <description>Python scanner fixture</description>
  <maintainer email="fixture@example.com">Fixture</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
